--- a/Unconverted/createAccount.html
+++ b/Unconverted/createAccount.html
@@ -10,16 +10,18 @@
     <link rel="icon" type="image/png" sizes="290x290" href="assets/img/logo.png?h=adece2ed323b3f2ce91ddc8f52cddb21">
     <link rel="icon" type="image/png" sizes="290x290" href="assets/img/logo.png?h=adece2ed323b3f2ce91ddc8f52cddb21">
     <link rel="icon" type="image/png" sizes="290x290" href="assets/img/logo.png?h=adece2ed323b3f2ce91ddc8f52cddb21">
-    <link rel="stylesheet" href="assets/bootstrap/css/bootstrap.min.css?h=6d65b9bd53bb19cdce4b34d2020a2b57">
+    <link rel="stylesheet" href="assets/bootstrap/css/bootstrap.min.css?h=f7adef51c1c6c1299acc766acf6a653d">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Nunito:200,200i,300,300i,400,400i,600,600i,700,700i,800,800i,900,900i">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Montserrat:400,400i,700,700i,600,600i">
     <link rel="stylesheet" href="assets/fonts/fontawesome-all.min.css?h=cfa788754642173dafbd830bd7969fdb">
     <link rel="stylesheet" href="assets/fonts/font-awesome.min.css?h=cfa788754642173dafbd830bd7969fdb">
     <link rel="stylesheet" href="assets/fonts/ionicons.min.css?h=cfa788754642173dafbd830bd7969fdb">
     <link rel="stylesheet" href="assets/fonts/fontawesome5-overrides.min.css?h=cfa788754642173dafbd830bd7969fdb">
     <link rel="stylesheet" href="https://cdn.datatables.net/1.10.15/css/dataTables.bootstrap.min.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/aos/2.1.1/aos.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/baguettebox.js/1.10.0/baguetteBox.min.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.2.0/assets/owl.carousel.css">
-    <link rel="stylesheet" href="assets/css/styles.min.css?h=ff1782feec5a88a7ed7e0e0d66a20689">
+    <link rel="stylesheet" href="assets/css/styles.min.css?h=d9f0eb79067b5bb897872e3b233e5d64">
 </head>
 
 <body style="background-color: #fffdfa;">
@@ -62,12 +64,12 @@
                 </ul><a class="btn btn-primary" role="button" style="width: 85px;margin: 9px;padding: 6px;background-color: rgb(79,121,96);" href="login.html">Log In</a></div>
         </div>
     </nav>
-    <div class="container" style="height: 675px;padding: -1px;width: 100%;">
-        <div class="card shadow-lg o-hidden border-0 my-5" style="height: 524px;">
-            <div class="card-body p-0" style="height: 602px;">
+    <div class="container" style="height: 675px;padding: 0px;width: 100%;margin-bottom: 29px;">
+        <div class="card shadow-lg o-hidden border-0 my-5" style="height: 547px;">
+            <div class="card-body p-0" style="height: 611px;">
                 <div class="row" style="height: 596px;">
                     <div class="col-lg-5 d-none d-lg-flex">
-                        <div class="flex-grow-1 bg-register-image" style="background-image: url(&quot;assets/img/IMG_3123_0.JPG?h=0d30782d6f67ca96ae30d666dd15cb1f&quot;);"></div>
+                        <div class="flex-grow-1 bg-register-image" style="background-image: url(&quot;assets/img/IMG_3123_0.JPG?h=0d30782d6f67ca96ae30d666dd15cb1f&quot;);width: 260px;"></div>
                     </div>
                     <div class="col-lg-7" style="height: 604px;">
                         <div class="p-5" style="height: 611px;min-height: 0px;">
@@ -96,42 +98,50 @@
             </div>
         </div>
     </div>
-    <div class="footer-dark" style="background-color: rgb(144,93,51);height: 20%;padding: 50px;width: 100%;">
+    <div class="footer-dark" style="background-color: rgb(144,93,51);height: 375px;padding: 50px;width: 100%;">
         <footer>
             <div class="container">
                 <div class="row">
                     <div class="col-sm-6 col-md-3 item">
                         <ul></ul><img src="assets/img/logo.png?h=adece2ed323b3f2ce91ddc8f52cddb21" style="width: 166px;padding: -2px;margin: 1px;"></div>
                     <div class="col-sm-6 col-md-3 item">
-                        <ul>
-                            <li style="height: 35px;font-size: 20px;">About</li>
-                            <li style="font-size: 20px;height: 35px;">Market</li>
-                            <li style="height: 35px;font-size: 20px;">At The Farm</li>
-                            <li style="font-size: 20px;height: 35px;">Support</li>
-                            <li><a href="#"></a></li>
-                        </ul>
+                        <a href="about.html">
+                            <p style="color: rgb(240,249,255);font-size: 20px;">About</p>
+                        </a>
+                        <a href="#">
+                            <p style="color: rgb(240,249,255);font-size: 20px;">Market</p>
+                        </a>
+                        <a href="visitTheFarm.html">
+                            <p style="color: rgb(240,249,255);font-size: 20px;">At The Farm</p>
+                        </a>
+                        <a href="contact.html">
+                            <p style="color: rgb(240,249,255);font-size: 20px;">Contact</p>
+                        </a>
                     </div>
                     <div class="col-md-6 item text">
                         <h3 style="font-size: 20px;">Sprout Creek Farm<br></h3>
-                        <p>34 Lauer Road, Poughkeepsie, New York, 12603<br><br>Inquiry Phone Number: +1 (845) 485-8438<br>Market Ordering Phone Number: +1 (845) 485-9886<br>E-Mail: info@sproutcreekfarm.org</p>
+                        <p>34 Lauer Road, Poughkeepsie, New York, 12603<br><br>Open 7 Days A Week: 10:00 AM - 5:00 PM<br><br>Inquiry Phone Number: +1 (845) 485-8438<br>Market Ordering Phone Number: +1 (845) 485-9886<br>E-Mail: info@sproutcreekfarm.org</p>
                     </div>
-                    <div class="col item social" style="height: 41px;"><a href="#" style="width: 41px;"><i class="icon ion-social-facebook"></i></a><a href="#"><i class="icon ion-social-twitter"></i></a><a href="#"><i class="icon ion-social-snapchat"></i></a><a href="#"><i class="icon ion-social-instagram"></i></a></div>
-                    <div
-                        class="clearfix"></div>
+                    <div class="col item social" style="height: 41px;"><a href="https://www.facebook.com/sproutcreekfarm/" style="width: 41px;"><i class="icon ion-social-facebook"></i></a><a href="https://twitter.com/sproutcreekfarm?lang=en"><i class="icon ion-social-twitter"></i></a><a href="#"><i class="icon ion-social-snapchat"></i></a>
+                        <a
+                            href="https://www.instagram.com/sproutcreekfarm/?hl=en"><i class="icon ion-social-instagram"></i></a>
+                    </div>
+                    <div class="clearfix"></div>
+                </div>
+                <p class="copyright">Sprout Creek Farm © 2019</p>
             </div>
-            <p class="copyright">Sprout Creek Farm © 2019</p>
-    </div>
-    </footer>
+        </footer>
     </div>
     <script src="assets/js/jquery.min.js?h=83e266cb1712b47c265f77a8f9e18451"></script>
     <script src="assets/bootstrap/js/bootstrap.min.js?h=63715b63ee49d5fe4844c2ecae071373"></script>
     <script src="assets/js/chart.min.js?h=cfa788754642173dafbd830bd7969fdb"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/aos/2.1.1/aos.js"></script>
     <script src="https://cdn.datatables.net/1.10.15/js/jquery.dataTables.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/baguettebox.js/1.10.0/baguetteBox.min.js"></script>
     <script src="https://cdn.datatables.net/1.10.15/js/dataTables.bootstrap.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-easing/1.4.1/jquery.easing.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.2.0/owl.carousel.js"></script>
-    <script src="assets/js/script.min.js?h=f61c25f2cf09fbf27b6a6183faa71610"></script>
+    <script src="assets/js/script.min.js?h=0a3dc1f4faeab187cfda137583902679"></script>
 </body>
 
 </html>
