--- a/Unconverted/pageNotFound.html
+++ b/Unconverted/pageNotFound.html
@@ -24,7 +24,7 @@
     <link rel="stylesheet" href="assets/css/styles.min.css?h=d9f0eb79067b5bb897872e3b233e5d64">
 </head>
 
-<body style="background-color: #fffdfa;">
+<body>
     <nav class="navbar navbar-light navbar-expand-lg sticky-top navigation-clean" style="background-color: rgb(255,250,241);padding: 0px;width: 100%;height: 150px;">
         <div class="container-fluid"><img class="img-fluid" src="assets/img/logo.png?h=adece2ed323b3f2ce91ddc8f52cddb21" style="width: 500px;height: 51%;padding: 0px;margin: 3px;">
             <div><a class="navbar-brand text-left float-left" href="landing.html" style="padding: 3px;margin: 0px;font-size: 25px;">Sprout Creek Farm<div style="width: 173px;height: 32px;"><input class="form-control-plaintext" type="text" value="Educate, Cultivate, Aspire" readonly="" style="font-size: 15px;width: 176px;"></div></a></div>
@@ -33,9 +33,7 @@
                 <div class="collapse navbar-collapse text-justify" id="navcol-1" style="width: 653px;background-color: #fffaf1;">
                     <ul class="nav navbar-nav ml-auto" style="background-color: #fffaf1;">
                         <li class="nav-item" role="presentation"><a class="nav-link" href="about.html" style="height: 46px;width: 98px;font-size: 20px;">About</a></li>
-                        <li class="nav-item" role="presentation"></li>
-                        <li class="nav-item" role="presentation"></li>
-                        <li class="nav-item" role="presentation"><a class="nav-link" style="font-size: 20px;" href="about.html">Market</a></li>
+                        <li class="nav-item" role="presentation"><a class="nav-link" href="#" style="font-size: 20px;">Market</a></li>
                         <li class="nav-item" role="presentation"></li>
                         <li class="nav-item dropdown" style="background-color: rgb(255,250,241);"><a class="dropdown-toggle nav-link" data-toggle="dropdown" aria-expanded="false" href="#" style="font-size: 20px;">At The Farm&nbsp;</a>
                             <div class="dropdown-menu" role="menu"><a class="dropdown-item" role="presentation" href="#">Visit The Farm</a><a class="dropdown-item" role="presentation" href="#">Summer Camp</a><a class="dropdown-item" role="presentation" href="blog.html">Blog</a></div>
@@ -66,46 +64,48 @@
                 </ul><a class="btn btn-primary" role="button" style="width: 85px;margin: 9px;padding: 6px;background-color: rgb(79,121,96);" href="login.html">Log In</a></div>
         </div>
     </nav>
-    <div style="background-repeat: no-repeat;width: 100%;">
-        <div id="box-2" style="background-image: url(&quot;assets/img/Screen%20Shot%202019-10-16%20at%202.48.05%20PM.png?h=505acbc2170c2fd347522653fa8cf0fa&quot;);background-repeat: no-repeat;height: 1010px;background-position: top;background-size: cover;opacity: 1;">
-            <h1 data-aos="fade-up" data-aos-duration="2000" data-aos-once="true" style="font-size: 56px;height: 838px;">Our Farm</h1>
-        </div>
-        <div id="box-3" style="background-repeat: no-repeat;background-image: url(&quot;assets/img/Screen%20Shot%202019-10-16%20at%202.46.29%20PM.png?h=2672f43c06bac8badd35c7a44954d867&quot;);background-size: cover;background-position: center;opacity: 1;">
-            <h1 class="shadow-lg" data-aos="fade-up" data-aos-duration="2000" data-aos-once="true" style="background-image: url(&quot;none&quot;);height: 838px;background-size: cover;background-repeat: no-repeat;font-size: 56px;">Our People</h1>
-        </div>
-        <div id="box-1" style="background-image: url(&quot;assets/img/June%20%20Bug.jpg?h=67baae218b948484ab3f1c07181faa2d&quot;);background-size: cover;background-repeat: no-repeat;background-position: center;opacity: 1;">
-            <h1 class="shadow-lg" data-aos="fade-up" data-aos-duration="2000" data-aos-once="true" style="background-image: url(&quot;none&quot;);background-size: cover;background-repeat: no-repeat;font-size: 56px;">Our Story</h1>
-        </div>
-        <div id="box-1" style="background-position: right;background-repeat: no-repeat;background-size: cover;background-image: url(&quot;none&quot;);opacity: 1;">
-            <h1 data-aos="fade-up" data-aos-duration="2000" data-aos-once="true" style="background-image: url(&quot;assets/img/IMG_3123_0-1.jpg?h=81f4696c77d57e8efb55ffdd066e10ba&quot;);background-repeat: no-repeat;background-size: cover;background-position: right;font-size: 56;margin: 0px;padding: 0px;"><img data-aos="fade-up" data-aos-duration="2000" data-aos-once="true" src="assets/img/logo-1.png?h=7e41bf5ab9b7fcded5742bc15631d247" style="width: 328px;"><br><br>educate ·&nbsp;cultivate ·&nbsp;aspire</h1>
+    <div class="container" style="height: 675px;padding: 0px;width: 100%;">
+        <div class="card shadow-lg o-hidden border-0 my-5" style="height: 547px;">
+            <div class="card-body p-0">
+                <div class="text-center">
+                    <h4 class="text-center mb-4" style="height: 81px;font-size: 33px;margin-bottom: 9px;padding-top: 30px;padding-bottom: 87px;"><strong>404: Page Not Found</strong><br>Opps.. Looks Like You Have Wandered Off The Farm<br><br><br></h4><a href="landing.html" style="font-size: 24px;">Don't Worry! Click Here To Take You Back.</a>
+                    <p class="lead" style="font-size: 24px;">Enjoy The Picture of June Bug&nbsp;</p><img src="assets/img/June%20%20Bug.jpg?h=67baae218b948484ab3f1c07181faa2d" width="500px" style="padding-top: 15px;width: 491px;"></div>
+            </div>
         </div>
     </div>
-    <div class="footer-dark" style="background-color: rgb(144,93,51);height: 350px;padding: 50px;width: 100%;">
+    <div class="footer-dark" style="background-color: rgb(144,93,51);height: 375px;padding: 50px;width: 100%;">
         <footer>
             <div class="container">
                 <div class="row">
                     <div class="col-sm-6 col-md-3 item">
                         <ul></ul><img src="assets/img/logo.png?h=adece2ed323b3f2ce91ddc8f52cddb21" style="width: 166px;padding: -2px;margin: 1px;"></div>
                     <div class="col-sm-6 col-md-3 item">
-                        <ul>
-                            <li style="height: 35px;font-size: 20px;">About</li>
-                            <li style="font-size: 20px;height: 35px;">Market</li>
-                            <li style="height: 35px;font-size: 20px;">At The Farm</li>
-                            <li style="font-size: 20px;height: 35px;">Support</li>
-                            <li><a href="#"></a></li>
-                        </ul>
+                        <a href="about.html">
+                            <p style="color: rgb(240,249,255);font-size: 20px;">About</p>
+                        </a>
+                        <a href="#">
+                            <p style="color: rgb(240,249,255);font-size: 20px;">Market</p>
+                        </a>
+                        <a href="visitTheFarm.html">
+                            <p style="color: rgb(240,249,255);font-size: 20px;">At The Farm</p>
+                        </a>
+                        <a href="contact.html">
+                            <p style="color: rgb(240,249,255);font-size: 20px;">Contact</p>
+                        </a>
                     </div>
                     <div class="col-md-6 item text">
                         <h3 style="font-size: 20px;">Sprout Creek Farm<br></h3>
-                        <p>34 Lauer Road, Poughkeepsie, New York, 12603<br><br>Inquiry Phone Number: +1 (845) 485-8438<br>Market Ordering Phone Number: +1 (845) 485-9886<br>E-Mail: info@sproutcreekfarm.org</p>
+                        <p>34 Lauer Road, Poughkeepsie, New York, 12603<br><br>Open 7 Days A Week: 10:00 AM - 5:00 PM<br><br>Inquiry Phone Number: +1 (845) 485-8438<br>Market Ordering Phone Number: +1 (845) 485-9886<br>E-Mail: info@sproutcreekfarm.org</p>
                     </div>
-                    <div class="col item social" style="height: 41px;"><a href="#" style="width: 41px;"><i class="icon ion-social-facebook"></i></a><a href="#"><i class="icon ion-social-twitter"></i></a><a href="#"><i class="icon ion-social-snapchat"></i></a><a href="#"><i class="icon ion-social-instagram"></i></a></div>
-                    <div
-                        class="clearfix"></div>
+                    <div class="col item social" style="height: 41px;"><a href="https://www.facebook.com/sproutcreekfarm/" style="width: 41px;"><i class="icon ion-social-facebook"></i></a><a href="https://twitter.com/sproutcreekfarm?lang=en"><i class="icon ion-social-twitter"></i></a><a href="#"><i class="icon ion-social-snapchat"></i></a>
+                        <a
+                            href="https://www.instagram.com/sproutcreekfarm/?hl=en"><i class="icon ion-social-instagram"></i></a>
+                    </div>
+                    <div class="clearfix"></div>
+                </div>
+                <p class="copyright">Sprout Creek Farm © 2019</p>
             </div>
-            <p class="copyright">Sprout Creek Farm © 2019</p>
-    </div>
-    </footer>
+        </footer>
     </div>
     <script src="assets/js/jquery.min.js?h=83e266cb1712b47c265f77a8f9e18451"></script>
     <script src="assets/bootstrap/js/bootstrap.min.js?h=63715b63ee49d5fe4844c2ecae071373"></script>
