--- a/Unconverted/itemIndividual.html
+++ b/Unconverted/itemIndividual.html
@@ -10,7 +10,7 @@
     <link rel="icon" type="image/png" sizes="290x290" href="assets/img/logo.png?h=adece2ed323b3f2ce91ddc8f52cddb21">
     <link rel="icon" type="image/png" sizes="290x290" href="assets/img/logo.png?h=adece2ed323b3f2ce91ddc8f52cddb21">
     <link rel="icon" type="image/png" sizes="290x290" href="assets/img/logo.png?h=adece2ed323b3f2ce91ddc8f52cddb21">
-    <link rel="stylesheet" href="assets/bootstrap/css/bootstrap.min.css?h=38e3ab0a585d489cb7770c2e0379e26f">
+    <link rel="stylesheet" href="assets/bootstrap/css/bootstrap.min.css?h=ec6a64da64c307166a1dd4c6c6003e96">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Nunito:200,200i,300,300i,400,400i,600,600i,700,700i,800,800i,900,900i">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Montserrat:400,400i,700,700i,600,600i">
     <link rel="stylesheet" href="assets/fonts/fontawesome-all.min.css?h=cfa788754642173dafbd830bd7969fdb">
@@ -18,7 +18,7 @@
     <link rel="stylesheet" href="assets/fonts/ionicons.min.css?h=cfa788754642173dafbd830bd7969fdb">
     <link rel="stylesheet" href="assets/fonts/simple-line-icons.min.css?h=cfa788754642173dafbd830bd7969fdb">
     <link rel="stylesheet" href="assets/fonts/fontawesome5-overrides.min.css?h=cfa788754642173dafbd830bd7969fdb">
-    <link rel="stylesheet" href="assets/css/Animated-Pretty-Product-List-v12.css?h=af7847de824579002526238d50d0c733">
+    <link rel="stylesheet" href="assets/css/Animated-Pretty-Product-List-v12.css?h=05002a2c3312bdb94ad95444ddc83d83">
     <link rel="stylesheet" href="assets/css/Article-List.css?h=cec575f25bba55cfaa10100750e76412">
     <link rel="stylesheet" href="assets/css/Data-Table-1.css?h=71f79ecfb6de2ac09d4f4c6f4b749319">
     <link rel="stylesheet" href="assets/css/Data-Table.css?h=71f79ecfb6de2ac09d4f4c6f4b749319">
@@ -36,8 +36,8 @@
     <link rel="stylesheet" href="assets/css/untitled.css?h=f6441da0d967d82071852bf314b3de49">
 </head>
 
-<body>
-    <nav class="navbar navbar-light navbar-expand-lg sticky-top navigation-clean" style="background-color: rgb(255,250,241);padding: 0px;width: 100%;height: 150px;margin-bottom: 20px;">
+<body style="background-color: #fffaf2;">
+    <nav class="navbar navbar-light navbar-expand-lg sticky-top shadow navigation-clean" style="background-color: rgb(255,250,241);padding: 0px;width: 100%;height: 150px;margin-bottom: 20px;">
         <div class="container-fluid"><img class="img-fluid" src="assets/img/logo.png?h=adece2ed323b3f2ce91ddc8f52cddb21" style="width: 500px;height: 51%;padding: 0px;margin: 3px;">
             <div><a class="navbar-brand text-left float-left" href="#" style="padding: 3px;margin: 0px;font-size: 25px;">Sprout Creek Farm<div style="width: 173px;height: 32px;"><input class="form-control-plaintext" type="text" value="Educate, Cultivate, Aspire" readonly="" style="font-size: 15px;width: 176px;"></div></a></div>
             <button
@@ -76,24 +76,33 @@
                 </ul><button class="btn btn-primary" type="button" style="width: 85px;margin: 9px;padding: 6px;background-color: rgb(79,121,96);">Log In</button></div>
         </div>
     </nav>
-    <header></header><a href="#" style="font-size: 20px;margin-left: 40px;margin-top: 0px;">Back To Previous Page</a>
-    <div class="container shadow-sm" style="background-color: #ffffff;margin-top: 95px;">
-        <div class="row justify-content-center align-items-center" style="margin-top: 0px;margin-right: 0px;margin-left: 0px;margin-bottom: 0px;">
-            <div class="col-md-6 col-xl-4" style="margin-top: 30px;padding: 0px;padding-right: 0px;margin-right: 6px;">
+    <header></header><a href="#" style="font-size: 20px;margin-left: 40px;margin-top: 0px;color: rgb(133,135,150);">Back To Previous Page</a>
+    <div class="container border rounded shadow-sm" style="background-color: #ffffff;margin-top: 60px;max-width: 900px;">
+        <div class="row justify-content-center align-items-center" style="margin-top: 0px;margin-right: 0px;margin-left: 0px;margin-bottom: 0px;padding-top: 10px;padding-right: 10px;padding-bottom: 10px;padding-left: 10px;">
+            <div class="col-auto col-sm-auto col-md-auto col-lg-auto col-xl-auto" style="margin-top: 30px;padding: 0px;padding-right: 0px;margin-right: 6px;">
                 <div class="gallery">
                     <div class="sp-wrap"><a href="assets/img/tech/image1.jpg?h=632f7cbe39109a76c61629561f97c295"><img class="img-fluid d-block mx-auto" src="assets/img/tech/image1.jpg?h=632f7cbe39109a76c61629561f97c295"></a><a href="assets/img/tech/image1.jpg?h=632f7cbe39109a76c61629561f97c295"><img class="img-fluid d-block mx-auto" src="assets/img/tech/image1.jpg?h=632f7cbe39109a76c61629561f97c295"></a><a href="assets/img/tech/image1.jpg?h=632f7cbe39109a76c61629561f97c295"><img class="img-fluid d-block mx-auto" src="assets/img/tech/image1.jpg?h=632f7cbe39109a76c61629561f97c295"></a></div>
-                </div><img src="assets/img/bogart.jpg?h=e60673f3dcbecae44bc43ea5761f59d0" style="background-position: center;background-size: auto;margin-bottom: 20px;padding-right: 0px;"></div>
-            <div class="col-md-6 col-xl-7" style="margin-bottom: 30px;">
-                <div class="info" style="margin-top: 0px;">
-                    <h3 style="margin-top: 53px;">Bogart</h3>
+                </div><img src="assets/img/bogart.jpg?h=e60673f3dcbecae44bc43ea5761f59d0" style="background-position: center;background-size: auto;margin-bottom: 20px;width: 250px;"></div>
+            <div class="col-auto col-md-auto col-lg-auto col-xl-auto" style="margin-bottom: 30px;padding-top: 12px;padding-right: 25px;padding-bottom: 12px;padding-left: 25px;">
+                <div class="info">
+                    <h3 class="text-center" style="margin-top: 5px;font-size: 25px;height: 37px;color: rgb(98,100,112);"><strong><em>Bogart</em></strong></h3>
                     <div class="price">
-                        <h3 style="margin-top: 20px;font-size: 26px;">$12.00</h3>
+                        <h3 style="margin-top: 20px;font-size: 22px;color: rgb(98,100,112);"><strong>Price Per Unit:</strong><br></h3>
+                        <p id="pricePerUnit" style="font-size: 22px;color: rgb(98,100,112);">$12.00</p>
+                    </div>
+                    <div class="price">
+                        <h3 style="margin-top: 20px;font-size: 22px;color: rgb(98,100,112);"><strong>Category:</strong><br></h3>
+                        <p id="categoryItem" style="font-size: 22px;color: rgb(98,100,112);">Cheese</p>
                     </div>
                     <div class="summary">
-                        <p style="margin-top: 15px;">This savory smear-ripened raw cows' milk cheese with a full scattering of eyes has an aromatic soft yellow paste, and a crisp coppery rind. Aged 2-4 months.</p>
-                        <div class="col-6 col-md-2 quantity"><label class="col-form-label d-none d-md-block" for="quantity" style="font-size: 16px;">Quantity:<input type="number" id="number" class="form-control quantity-input" value="1" style="width: 60px;padding-right: 6px;padding-bottom: 6px;padding-left: 6px;"></label></div>
+                        <h3 style="margin-top: 20px;font-size: 22px;height: 29px;color: rgb(98,100,112);"><strong>Description:</strong><br><br></h3>
+                        <p id="descriptionItem" style="margin-top: 15px;font-size: 20px;color: rgb(98,100,112);">This savory smear-ripened raw cows' milk cheese with a full scattering of eyes has an aromatic soft yellow paste, and a crisp coppery rind. Aged 2-4 months.</p>
                     </div>
-                </div><button class="btn btn-primary btn-block" type="button" style="margin-top: 10px;background-color: rgb(79,121,96);"><i class="icon-basket"></i>&nbsp;Add to Cart</button></div>
+                </div>
+                <div><label class="d-none d-md-block" for="quantity" style="font-size: 22px;color: rgb(98,100,112);"><strong>Quantity:</strong><input type="number" id="quantity" class="form-control quantity-input" value="1" style="width: 60px;padding-right: 6px;padding-bottom: 6px;padding-left: 6px;" min="1"></label></div>
+                <button
+                    class="btn btn-primary btn-block" type="button" style="margin-top: 30px;background-color: rgb(79,121,96);height: 50px;font-size: 22px;"><i class="icon-basket"></i>&nbsp;Add to Cart</button>
+            </div>
         </div>
     </div>
     <div class="footer-dark" style="background-color: rgb(144,93,51);height: 377px;padding: 50px;width: 100%;margin-top: 100px;">
@@ -136,6 +145,7 @@
     <script src="https://cdn.datatables.net/1.10.15/js/dataTables.bootstrap.min.js"></script>
     <script src="assets/js/Sprout-Creek-Shopping-Cart-1.js?h=975b2635c9a06eae9f47d6cae8158a12"></script>
     <script src="assets/js/Sprout-Creek-Shopping-Cart.js?h=417b03f5f0a4f9f27f8c248f532eb5af"></script>
+    <script src="assets/js/cart.js?h=66e43e4e02fe90f22c60cb6f3009905b"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-easing/1.4.1/jquery.easing.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.2.0/owl.carousel.js"></script>
     <script src="assets/js/paymentPage.js?h=4e608b48fff1ea5dffa039eb883dac8e"></script>
